# LearnOpenGL

./: CMakeLists.txt  readme.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
inc/: main.hpp
src/: main.cpp  readme.md
